--- a/KinematicDesign2D_ThreeBodies/MainWindow.ui
+++ b/KinematicDesign2D_ThreeBodies/MainWindow.ui
@@ -563,6 +563,9 @@
    <property name="checkable">
     <bool>true</bool>
    </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>Restrict Motion Range</string>
    </property>
